Integrate transfer learning into the train script

--- a/src/config_file_template.yaml
+++ b/src/config_file_template.yaml
@@ -49,13 +49,13 @@ config_train:
   spec:
     audio_representation_folder: audio_representation/
     batch_size: 32
-    epochs: 600
+    epochs: %(epochs)s
     gt_train: %(gt_train)s
     gt_val: %(gt_val)s
     gt_test: %(gt_test)s
     learning_rate: 0.001
-    load_model: null
-    model_number: 2
+    load_model: %(load_model)s
+    model_number: %(model_number)s
     n_frames: 187
     name_run: ''
     num_classes_dataset: %(num_classes_dataset)s
