--- a/src/config_file_template.yaml
+++ b/src/config_file_template.yaml
@@ -70,6 +70,7 @@ config_train:
     weight_decay: 1.0e-05
     n_folds: %(n_folds)s
     fold: %(fold)s
+    seed: %(seed)s
     mode : %(mode)s  # regular, adversarial_type_a, adversarial_type_b
     lambda: %(lambda)s  # lambda for reversal gradient models
     discriminator_dimensions: 1
