--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,5 @@ termcolor==1.1.0
 tqdm==4.32.2
 Werkzeug==0.15.5
 wrapt==1.11.2
+pyyaml
+essentia  # TODO: Fix Essentia version once we havea a wheel with the required pytools
