--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ scikit-learn==0.21.3
 scipy==1.3.0
 six==1.12.0
 SoundFile==0.10.2
+tensorflow==1.15.0
 termcolor==1.1.0
 tqdm==4.32.2
 Werkzeug==0.15.5
