Add preprocessing routines and refactor code
- Support extracting ol3, spleeter and tempocnn features
- Preprocessing is unified into a single script `preprocess.py`
- Each feature is computed in a separate `feature_*` file
- `preprocess_crosseval.py` also relies in the new routines

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,4 @@ Werkzeug==0.15.5
 wrapt==1.11.2
 pyyaml
 essentia  # TODO: Fix Essentia version once we havea a wheel with the required pytools
+scikit-image
