--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,4 @@ wrapt==1.11.2
 pyyaml
 essentia  # TODO: Fix Essentia version once we havea a wheel with the required pytools
 scikit-image
+tf-slim
