--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ pyyaml
 scikit-image
 scikit-learn==0.21.3  # also a dependency of librosa
 scipy==1.3.0  # also a dependency of librosa, scikit-image & scikit-learn
-tensorflow==1.15.0
+tensorflow>=1.15.0,<3.0
 tf-slim
 tqdm==4.32.2
