--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 essentia  # TODO: Fix Essentia version once we have a wheel with the required pytools
-joblib==0.13.2  # also a dependency of librosa, pescador, scikit-learn
-librosa==0.7.0
-numpy==1.16.4 # also a dependency of essentia, essentia-tensorflow, tensorflow, scikit-image, librosa, scikit-learn, scipy
-pescador==2.0.2
+joblib~=0.13.2  # also a dependency of librosa, pescador, scikit-learn
+librosa~=0.7.0
+numpy~=1.16.4 # also a dependency of essentia, essentia-tensorflow, tensorflow, scikit-image, librosa, scikit-learn, scipy
+pescador~=2.0.2
 pyyaml
 scikit-image
-scikit-learn==0.21.3  # also a dependency of librosa
-scipy==1.3.0  # also a dependency of librosa, scikit-image & scikit-learn
+scikit-learn~=0.21.3  # also a dependency of librosa
+scipy~=1.3.0  # also a dependency of librosa, scikit-image & scikit-learn
 tensorflow>=1.15.0,<3.0
 tf-slim
-tqdm==4.32.2
+tqdm~=4.32.2
