--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ mtgdb-models ]
+    branches: [ * ]
   pull_request:
-    branches: [ mtgdb-models ]
+    branches: [ * ]
 
 jobs:
   build:
