only run github workflow for the main branch

--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-    branches: [ mtgdb-models, compute_auc ]
+    branches: [ mtgdb-models ]
   pull_request:
     branches: [ mtgdb-models ]
 
